tests/ui/const-generics/generic_const_exprs/ice-closure-const-default-119316.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
 --> $DIR/ice-closure-const-default-119316.rs:6:12
  |
LL | #![feature(generic_const_exprs)]
  |            ^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
  = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
 --> $DIR/ice-closure-const-default-119316.rs:8:31
  |
LL | struct Bug<const N: usize = { || 0 }>;
  |                               ^^^^ expected `usize`, found closure
  |
  = note: expected type `usize`
          found closure `{closure@$DIR/ice-closure-const-default-119316.rs:8:31: 8:33}`
help: use parentheses to call this closure
  |
LL | struct Bug<const N: usize = { (|| 0)() }>;
  |                               +    +++

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
